--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=oose-project
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.properties.hibernate.connection.url=jdbc:sqlite:src/main/resources/database.sqlite3
-spring.datasource.url=jdbc:sqlite::resources:database.sqlite3?createDatabaseIfNotExist=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = create
